--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="renderer" content="webkit">
     <title>NiceFish</title>
-    <base href="/">
+    <base href="/NiceFish/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- If you are not inside GFW,use CDN will be better.-->
@@ -20,7 +20,9 @@
 </head>
 
 <body>
-    <app-root><h1>Loading...</h1></app-root>
+    <app-root>
+        <h1>Loading...</h1>
+    </app-root>
 </body>
 
 </html>
